--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,13 @@
 }
 
 body {
-  margin: 2rem;
   width: 100%;
   background-color: whitesmoke;
 }
 
 section {
   background-color: #fff;
-  margin: 24px 12px;
+  margin: 24px auto;
   width: 80%;
   box-shadow: 2px 2px whitesmoke;
 }
@@ -20,12 +19,13 @@ section {
 .title {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   border-bottom: 1px solid gray;
 }
 
 h1 {
-  padding: 2%;
+  padding: 1%;
   font-weight: 300;
 }
 
@@ -39,6 +39,7 @@ button {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
   padding: 1rem;
   border-bottom: 1px solid grey;
 }
@@ -46,6 +47,8 @@ button {
 input {
   border: none;
   background-color: #fff;
+
+  /* width: 80%; */
 }
 
 .btn-clear {
@@ -60,7 +63,8 @@ input {
 }
 
 .list-items {
-  padding: 12px 18px;
+  padding: 12px 4px;
+  margin: 0;
   border-bottom: 1px solid gray;
   display: flex;
   align-items: center;
@@ -68,6 +72,20 @@ input {
   flex-direction: row;
 }
 
-.desc {
-  margin-right: 80%;
+.remove {
+  background: transparent;
+  border: none;
+}
+
+.task-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-remove {
+  margin-left: auto;
+}
+
+.checkbox {
+  margin-left: 12px;
 }
